--- a/pkg/package.json
+++ b/pkg/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eurine/snake"
+    "url": "https://github.com/eurine/snake-game"
   },
   "files": [
     "snake_game_bg.wasm",
