--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,16 @@ env:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        node-version: [18.14.2]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup node ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
       - name: Build
         run: |
-          npm i -g wasm-pack
           wasm-pack build --target web
           cat > index.html <<EOL
           <html lang="en">
