--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           wasm-pack build --target web
           mkdir dist
-          mv pkg dist/
+          mv pkg dist/src
           cat > dist/index.html <<EOL
           <html lang="en">
             <head>
@@ -35,7 +35,7 @@ jobs:
             </head>
             <body>
               <script type="module">
-                import init from "./pkg/snake_game.js";
+                import init from "./src/snake_game.js";
                 init()
               </script>
             </body>
