--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,17 @@
 name = "snake-game"
 version = "0.1.0"
 edition = "2021"
+authers = ["Dilshad <dilshadplayingminecraft@outlook.com>"]
 description = "a snake game"
-repository = "https://github.com/eurine/snake-game"
+repository = "https://github.com/a-rustacean/snake-game"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release]
+lto = true
+
 [lib]
 crate-type = ["cdylib"]
 
