--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
           wasm-pack build --target web
           mkdir dist
           mkdir dist/src
+          npm i -g terser
+          terser pkg/snake_game.js --compress --mangle -o dist/src/snake_game.min.js 
           mv pkg/snake_game.js dist/src/
           mv pkg/snake_game_bg.wasm dist/src/
           cat > dist/index.html <<EOL
@@ -47,6 +49,7 @@ jobs:
           # About
           This is the compiled and previewable version of [snake game](https://github.com/a-rustacean/snake-game) made by [dilshad](https://github.com/a-rustacean). Try it [here](https://a-rustacean.github.io/snake-game)
           EOL
+          cp LICENSE dist/
           tree dist
 
       - name: Deploy
