--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ crate-type = ["cdylib"]
 [dependencies]
 js-sys = "0.3.61"
 regex = "1.7.2"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.96"
 wasm-bindgen = "0.2.84"
 
 
@@ -27,7 +29,7 @@ version = "0.3.61"
 features = [
   "Window", "Document", "Element", "HtmlElement",
   "CssStyleDeclaration", "Navigator", "HtmlButtonElement",
-  "KeyboardEvent"
+  "KeyboardEvent", "HtmlAudioElement", "Storage"
 ]
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
